--- a/Tests/Test.csproj
+++ b/Tests/Test.csproj
@@ -52,7 +52,7 @@
       <Project>{e52bc94c-488f-4b60-814b-18d93fed321e}</Project>
       <Name>Models</Name>
     </ProjectReference>
-    <ProjectReference Include="..\KMLLib\Core.csproj">
+    <ProjectReference Include="..\Core\Core.csproj">
       <Project>{d69d28d2-238a-4d30-81ad-bc027662f73d}</Project>
       <Name>Core</Name>
     </ProjectReference>
