Updated models reference

--- a/Tests/Test.csproj
+++ b/Tests/Test.csproj
@@ -52,6 +52,10 @@
       <Project>{d69d28d2-238a-4d30-81ad-bc027662f73d}</Project>
       <Name>Core</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Models\Models.csproj">
+      <Project>{e52bc94c-488f-4b60-814b-18d93fed321e}</Project>
+      <Name>Models</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
